Problem:In dashboard alerts widget,when the process name is long it is getting overlapped with the time icon on the right side Fix:Earlier the time icon has no proper width and also absolutley positioned,now we assigned specified width to time icon and process text

--- a/webroot/css/contrail.elements.css
+++ b/webroot/css/contrail.elements.css
@@ -3664,6 +3664,22 @@ td.td-actions a.td-action {
   position: relative;
   margin-left:5px;
 }
+
+#alerts-box-content > .item-list > .itemdiv > .body {
+	border-bottom: 1px solid #E4ECF3;
+}
+
+#alerts-box-content > .item-list > .itemdiv > .body > .text:after {
+    border-top: 0px;	
+}
+#alerts-box-content > .item-list > .itemdiv > .body > .text {
+	display:inline-block;
+}
+#alerts-box-content > .item-list > .itemdiv > .body > .time {
+	position:relative;
+	display:inline-block;
+	right:0px;
+}
 .itemdiv > .body > .time {
   display: block;
   font-size: 11px;
